Ignore .DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ Pipfile.lock
 
 
 ############################################
-
+# General
+.DS_Store
 
 # Created by .ignore support plugin (hsz.mobi)
 ### Python template
