--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Manual added part
 Pipfile
 Pipfile.lock
-
+models_demo
 
 
 ############################################
@@ -130,6 +130,9 @@ pip-selfcheck.json
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# General
+.idea
 
 # User-specific stuff
 .idea/**/workspace.xml
